practica3/MiGramatica.g4
grammar MiGramatica;

// Regla principal: permite múltiples sentencias terminadas en ';' o sin ';' al final
programa: (sentencia ';'?)+ EOF ;

// Sentencias permitidas
sentencia
    : forStmt      // Regla para `for`
    | asignacion   // Regla para asignaciones
    ;

// Regla para `for`
forStmt
    : 'for' '(' inicializacion ';' condicion ';' actualizacion ')' '{' (sentencia (';')?)* '}' # ForLoop
    ;

// Inicialización del `for` (Ej: i = 0)
inicializacion
    : ID '=' expresion 
    ;

// Condiciones dentro del `for` (Ej: i < 10)
condicion
    : ID op=('>' | '<' | '==' | '!=') INT  # CondicionSimple
    | ID op=('>' | '<' | '==' | '!=') ID   # CondicionVariable
    ;

// Actualización del `for` (Ej: i = i + 1)
actualizacion
    : ID '=' expresion 
    ;

// Asignaciones con `;`
asignacion
    : ID '=' expresion ';'? # Assign  // El ';' es opcional
    ;

// Expresiones matemáticas con prioridad de operadores
expresion
    : expresion op=('*'|'/') expresion     # MulDiv
    | expresion op=('+'|'-') expresion     # AddSub
    | INT                                  # Int
    | ID                                   # Variable
    | '(' expresion ')'                    # Parens
    ;

// Reglas léxicas
ID  : [a-zA-Z_][a-zA-Z_0-9]* ;  // Identificadores
INT : [0-9]+ ;                   // Números enteros
WS  : [ \t\r\n]+ -> skip ;       // Ignorar espacios en blanco
